Add background to featured box

--- a/featured-snippet.scss
+++ b/featured-snippet.scss
@@ -1,6 +1,7 @@
 .featured_snippet {
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
     border-radius: 2px;
+    background: white;
     @media (min-width: 469px) {
     	padding: 1em 0 1em 1em;
     }
