--- a/featured-snippet.scss
+++ b/featured-snippet.scss
@@ -3,11 +3,18 @@
     border-radius: 2px;
     background: white;
     @media (min-width: 469px) {
-    	padding: 1em 0 1em 1em;
+    	padding: 1em;
     }
     margin: 2em auto;
     width: 100%;
     overflow: hidden;
+    h1, h2, h3, h4, h5, h6 {
+    	font-size: 1em;
+    	line-height: 1.2em;
+    	margin: 0;
+    	margin-bottom: 1em;
+    	font-weight: bold;
+    }
     p {
     	font-size: 1em;
     	@media (max-width: 468px) {
@@ -16,6 +23,14 @@
     	&:last-child {
     		margin-bottom: 0;
     	}
+    	&:empty {
+		    display: none;
+		    margin-bottom: 0;
+		}
+    }
+    ul, ol {
+    	margin: 0;
+    	
     }
     img {
     	@media (min-width: 469px) {
@@ -24,5 +39,6 @@
     	}
     	margin-bottom: 1em;
     	margin-top: -1em;
+    	margin-right: -1em;
     }
 }
